# Autonomous-Educational-Video-Engine

./: .gitignore  CLAUDE.md  ORCHESTRATION.md  README.md  app.py  main.py  probe_keys.py  pyproject.toml  requirements.txt  setup_check.py  test_manim.py  test_models.py
.claude/: settings.local.json
frontend/static/: app.js  style.css
frontend/templates/: index.html
models/: llm_client.py
output/: scene_manifest.json  script_1_deep_solution.md
output/scenes/: manim.cfg  scene_001.py  scene_002.py  scene_003.py  scene_004.py  scene_005.py  scene_006.py  scene_007.py
pipeline/: __init__.py  animator.py  audio_stream.py  carryover.py  code_stream.py  director.py  env_setup.py  fallback_scene.py.j2  narrator.py  orchestrator.py  phase1_knowledge.py  phase2_committee.py  phase3_distributor.py  runtime.py  schemas.py  solver.py  style.py  sync_engine.py  timing.py  tts.py
pipeline/llm_clients/: __init__.py  errors.py  gemini.py  groq.py  openrouter.py  registry.py
pipeline/templates/: __init__.py  derivation_chain.py  equation_focus.py  graph.py  split_eq_text.py  title_only.py  title_plus_eq.py
renderer/: assembler.py  healer.py  manim_runner.py  render.py  sanitize.py
tests/: conftest.py  test_animator.py  test_assembler.py  test_carryover.py  test_director.py  test_e2e.py  test_golden.py  test_healer.py  test_narrator.py  test_no_legacy_sync.py  test_orchestrator.py  test_render.py  test_runtime.py  test_sanitize.py  test_schemas.py  test_setup_check.py  test_solver.py  test_templates.py  test_timing.py  test_tts.py
tests/golden/pythagoras_60s/: README.md  scene_003.py
