[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeve"
version = "2.0.0"
description = "Autonomous Educational Video Engine — multi-agent Manim + TTS pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "AEVE" }]

dependencies = [
    "manim==0.19.*",
    "pydantic>=2.7,<3",
    "httpx[http2]>=0.27",
    "groq>=0.11",
    "openai>=1.40",
    "google-genai>=0.3",
    "edge-tts>=6.1",
    "mutagen>=1.47",
    "Pillow>=10",
    "colorama>=0.4.6",
    "Flask>=3",
    "jinja2>=3.1",
    "python-dotenv>=1",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
aeve-setup-check = "setup_check:main"

[tool.setuptools]
py-modules = ["app", "main", "config", "setup_check"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "renderer*", "models*"]
exclude = ["tests*", "output*", "media*", "__pycache__*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
timeout = 120
markers = [
    "live: hits real LLM/TTS providers; only runs with `pytest -m live`",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
